Added unit testing

--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -44,6 +44,15 @@ jobs:
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_DEPTH }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_TAGS }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_SUBMODULES }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS }}
+      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUNS_ON }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUN_SCRIPT }}
@@ -86,6 +95,37 @@ jobs:
     if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CONDITION == 'true'"
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
+  ABSOLUTEPATHHELPERSTEST:
+    name: Test - absolute_path_helpers (AbsolutePathHelpersTest)
+    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON) }}
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH }}
+        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS }}
+        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES }}
+        persist-credentials: true
+    - name: Download Artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: ./.nuke/temp/artifacts-download
+    - name: Cache Run
+      uses: actions/cache@v4
+      with:
+        path: ./.nuke/temp/cache
+        key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY }}
+        restore-keys: |-
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY }}
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY }}
+    - id: NUKE_RUN
+      name: Run Nuke PipelineRunEntry
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT }} PipelineRunEntry --args "run=test;idsToRun=AbsolutePathHelpersTest"
+    needs:
+    - PRE_SETUP
+    - ABSOLUTEPATHHELPERSBUILD
+    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success'"
+    env:
+      NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   ABSOLUTEPATHHELPERSPUBLISH:
     name: Publish - absolute_path_helpers (AbsolutePathHelpersPublish)
     runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUNS_ON) }}
@@ -115,7 +155,8 @@ jobs:
     needs:
     - PRE_SETUP
     - ABSOLUTEPATHHELPERSBUILD
-    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success'"
+    - ABSOLUTEPATHHELPERSTEST
+    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success' && needs.ABSOLUTEPATHHELPERSTEST.result == 'success'"
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   POST_SETUP:
@@ -140,12 +181,14 @@ jobs:
     needs:
     - PRE_SETUP
     - ABSOLUTEPATHHELPERSBUILD
+    - ABSOLUTEPATHHELPERSTEST
     - ABSOLUTEPATHHELPERSPUBLISH
     if: success() || failure() || always()
     timeout-minutes: 10
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
       NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSBUILD: ${{ needs.ABSOLUTEPATHHELPERSBUILD.result }}
+      NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSTEST: ${{ needs.ABSOLUTEPATHHELPERSTEST.result }}
       NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSPUBLISH: ${{ needs.ABSOLUTEPATHHELPERSPUBLISH.result }}
 env:
   NUKE_NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
