--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -44,15 +44,24 @@ jobs:
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_DEPTH }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_FETCH_TAGS }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CHECKOUT_SUBMODULES }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS }}
-      NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES }}
+      NUKE_PRE_SETUP_TEST_LINUX_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CONDITION }}
+      NUKE_PRE_SETUP_TEST_LINUX_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_RUNS_ON }}
+      NUKE_PRE_SETUP_TEST_LINUX_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_RUN_SCRIPT }}
+      NUKE_PRE_SETUP_TEST_LINUX_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_KEY }}
+      NUKE_PRE_SETUP_TEST_LINUX_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_RESTORE_KEY }}
+      NUKE_PRE_SETUP_TEST_LINUX_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_MAIN_RESTORE_KEY }}
+      NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_DEPTH }}
+      NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_TAGS }}
+      NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_SUBMODULES }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CONDITION }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_RUNS_ON }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_RUN_SCRIPT }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_KEY }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_RESTORE_KEY }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_MAIN_RESTORE_KEY: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_MAIN_RESTORE_KEY }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_DEPTH: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_DEPTH }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_TAGS: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_TAGS }}
+      NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_SUBMODULES: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_SUBMODULES }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUNS_ON: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUNS_ON }}
       NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUN_SCRIPT: ${{ steps.NUKE_RUN.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUN_SCRIPT }}
@@ -95,15 +104,15 @@ jobs:
     if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CONDITION == 'true'"
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
-  ABSOLUTEPATHHELPERSTEST:
-    name: Test - absolute_path_helpers (AbsolutePathHelpersTest)
-    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUNS_ON) }}
+  TEST_LINUX:
+    name: Test - absolute_path_helpers (TEST_LINUX)
+    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_RUNS_ON) }}
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_DEPTH }}
-        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_FETCH_TAGS }}
-        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CHECKOUT_SUBMODULES }}
+        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_DEPTH }}
+        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_FETCH_TAGS }}
+        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CHECKOUT_SUBMODULES }}
         persist-credentials: true
     - name: Download Artifacts
       uses: actions/download-artifact@v4
@@ -113,17 +122,48 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ./.nuke/temp/cache
-        key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_KEY }}
+        key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_KEY }}
         restore-keys: |-
-          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_RESTORE_KEY }}
-          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CACHE_MAIN_RESTORE_KEY }}
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_RESTORE_KEY }}
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
       name: Run Nuke PipelineRunEntry
-      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_RUN_SCRIPT }} PipelineRunEntry --args "run=test;idsToRun=AbsolutePathHelpersTest"
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_RUN_SCRIPT }} PipelineRunEntry --args "run=test;idsToRun=TEST_LINUX"
     needs:
     - PRE_SETUP
     - ABSOLUTEPATHHELPERSBUILD
-    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSTEST_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success'"
+    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success'"
+    env:
+      NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
+  TEST_WINDOWS:
+    name: Test - absolute_path_helpers (TEST_WINDOWS)
+    runs-on: ${{ fromJson(needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_RUNS_ON) }}
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_DEPTH }}
+        fetch-tags: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_FETCH_TAGS }}
+        submodules: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CHECKOUT_SUBMODULES }}
+        persist-credentials: true
+    - name: Download Artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: ./.nuke/temp/artifacts-download
+    - name: Cache Run
+      uses: actions/cache@v4
+      with:
+        path: ./.nuke/temp/cache
+        key: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_KEY }}
+        restore-keys: |-
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_RESTORE_KEY }}
+          ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_MAIN_RESTORE_KEY }}
+    - id: NUKE_RUN
+      name: Run Nuke PipelineRunEntry
+      run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_RUN_SCRIPT }} PipelineRunEntry --args "run=test;idsToRun=TEST_WINDOWS"
+    needs:
+    - PRE_SETUP
+    - ABSOLUTEPATHHELPERSBUILD
+    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success'"
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   ABSOLUTEPATHHELPERSPUBLISH:
@@ -155,8 +195,9 @@ jobs:
     needs:
     - PRE_SETUP
     - ABSOLUTEPATHHELPERSBUILD
-    - ABSOLUTEPATHHELPERSTEST
-    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success' && needs.ABSOLUTEPATHHELPERSTEST.result == 'success'"
+    - TEST_LINUX
+    - TEST_WINDOWS
+    if: "! failure() && ! cancelled() && needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CONDITION == 'true' && needs.ABSOLUTEPATHHELPERSBUILD.result == 'success' && needs.TEST_LINUX.result == 'success' && needs.TEST_WINDOWS.result == 'success'"
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
   POST_SETUP:
@@ -181,14 +222,16 @@ jobs:
     needs:
     - PRE_SETUP
     - ABSOLUTEPATHHELPERSBUILD
-    - ABSOLUTEPATHHELPERSTEST
+    - TEST_LINUX
+    - TEST_WINDOWS
     - ABSOLUTEPATHHELPERSPUBLISH
     if: success() || failure() || always()
     timeout-minutes: 10
     env:
       NUKE_PRE_SETUP: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP }}
       NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSBUILD: ${{ needs.ABSOLUTEPATHHELPERSBUILD.result }}
-      NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSTEST: ${{ needs.ABSOLUTEPATHHELPERSTEST.result }}
+      NUKE_RUN_RESULT_GITHUB_TEST_LINUX: ${{ needs.TEST_LINUX.result }}
+      NUKE_RUN_RESULT_GITHUB_TEST_WINDOWS: ${{ needs.TEST_WINDOWS.result }}
       NUKE_RUN_RESULT_GITHUB_ABSOLUTEPATHHELPERSPUBLISH: ${{ needs.ABSOLUTEPATHHELPERSPUBLISH.result }}
 env:
   NUKE_NUGET_AUTH_TOKEN: ${{ secrets.NUGET_AUTH_TOKEN }}
