--- a/.github/workflows/nuke-cicd.yml
+++ b/.github/workflows/nuke-cicd.yml
@@ -88,7 +88,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke AbsolutePathHelpersBuild
+      name: Run Nuke AbsolutePathHelpersBuild
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSBUILD_RUN_SCRIPT }} Run --args "AbsolutePathHelpersBuild"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
@@ -125,7 +125,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke TEST_LINUX
+      name: Run Nuke TEST_LINUX
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_LINUX_RUN_SCRIPT }} Run --args "TEST_LINUX"
     needs:
     - PRE_SETUP
@@ -156,7 +156,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke TEST_WINDOWS
+      name: Run Nuke TEST_WINDOWS
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_TEST_WINDOWS_RUN_SCRIPT }} Run --args "TEST_WINDOWS"
     needs:
     - PRE_SETUP
@@ -188,7 +188,7 @@ jobs:
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CACHE_RESTORE_KEY }}
           ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_CACHE_MAIN_RESTORE_KEY }}
     - id: NUKE_RUN
-      name: Rune Nuke AbsolutePathHelpersPublish
+      name: Run Nuke AbsolutePathHelpersPublish
       run: ${{ needs.PRE_SETUP.outputs.NUKE_PRE_SETUP_ABSOLUTEPATHHELPERSPUBLISH_RUN_SCRIPT }} Run --args "AbsolutePathHelpersPublish"
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
