--- a/AbsolutePathHelpers/AbsolutePathHelpers.csproj
+++ b/AbsolutePathHelpers/AbsolutePathHelpers.csproj
@@ -30,20 +30,23 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Remove="Assets\handle.exe" />
+		<None Remove="Assets\handle.exe" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Include="Assets\handle.exe" />
+		<EmbeddedResource Include="Assets\handle.exe" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="SharpZipLib" Version="1.4.2" />
+		<PackageReference Include="MultiFormatDataConverter" Version="0.1.2" />
+		<PackageReference Include="SharpZipLib" Version="1.4.2" />
+		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
 		<EnableTrimAnalyzer>true</EnableTrimAnalyzer>
 		<IsTrimmable>true</IsTrimmable>
+		<PublishTrimmed>true</PublishTrimmed>
 	</PropertyGroup>
 
 </Project>
