--- a/AbsolutePathHelpers/AbsolutePathHelpers.csproj
+++ b/AbsolutePathHelpers/AbsolutePathHelpers.csproj
@@ -42,6 +42,7 @@
 		<PackageReference Include="MultiFormatDataConverter" Version="0.2.18" />
 		<PackageReference Include="SharpZipLib" Version="1.4.2" />
 		<PackageReference Include="YamlDotNet" Version="16.3.0" />
+		<PackageReference Include="SharpCompress" Version="0.38.0" />
 	</ItemGroup>
 
 	<PropertyGroup>
