--- a/AbsolutePathHelpers/AbsolutePathHelpers.csproj
+++ b/AbsolutePathHelpers/AbsolutePathHelpers.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+		<LangVersion>14</LangVersion>
+		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<LangVersion>13</LangVersion>
 		<IsAotCompatible>true</IsAotCompatible>
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<SuppressTfmSupportBuildWarnings>false</SuppressTfmSupportBuildWarnings>
-</PropertyGroup>
+	</PropertyGroup>
 
 	<PropertyGroup>
 		<Authors>Kiryuumaru</Authors>
